Fix centering alignment with homepage arrow

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -123,6 +123,9 @@ body {
         position: absolute;
         top: 90vh;
         color: white;
+
+        left: 50%;
+        transform: translate(-50%);
       }
     }
 
